tooling/nargo_cli/tests/compile_failure/trait_wrong_parameter_type/src/main.nr
trait Default {
    fn default(x: Field, y: NotAType) -> Field;
}

fn main(x: Field, y: Field) {
    assert(y == x);
}
